# rand_pic

./: Cargo.toml  foo.json  rand_pic.json  readme.txt
src/: lib.rs
src/cqapi/: mod.rs
src/cqevent/: do_group_msg.rs  mod.rs
